# DAppNodePackage-package-harness

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  dappnode_package.json  docker-compose.yml  rust-toolchain.toml  setup-wizard.yml
.github/workflows/: main.yml
docs/: architecture.md  result-schema.md
examples/: rotki-request.json  run-request.json
src/: clock.rs  config.rs  lib.rs  main.rs  tls.rs
src/analysis/: heuristic.rs  mod.rs  nexus.rs  redaction.rs
src/api/: auth.rs  mod.rs  routes.rs
src/coordinator/: client.rs  mod.rs  protocol.rs
src/model/: error.rs  evidence.rs  job.rs  mod.rs  run.rs  verdict.rs
src/package_manager/: dappmanager.rs  fake.rs  mod.rs  unavailable.rs
src/reporting/: github.rs  mod.rs  webhook.rs
src/runner/: cleanup.rs  comparison.rs  controller.rs  mod.rs  progress.rs  stabilization.rs
src/storage/: file.rs  mod.rs
src/worker/: heartbeat.rs  mod.rs  progress.rs
tests/: harness.rs
tests/fixtures/: claim-response.json  complete-worker-error.json  heartbeat-request.json
