[package]
name = "dappnode-package-harness"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "GPL-3.0"
description = "Disposable-node upgrade test harness for Dappnode packages"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["json", "macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
dappnode-mcp-client = "0.1.0"
dappnode-types = "0.1.0"
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = "9.3.1"
regex = "1.12.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
subtle = "2.6.1"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["limit", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6.5"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
